Fix review comments on batch composite-role expansion
- RoleUtils.expandCompositeRoles: guard against null KeycloakSession by
  falling back to per-role stack expansion when no session context is
  available (fixes r3488823474)
- RoleStorageManager.getCompositeRolesStream: split parent IDs into local
  and external; external (federated) IDs fall back to per-role
  getRoleById + getCompositesStream instead of being silently dropped
  (fixes r3488823485)
- RealmCacheSession.getCompositeRolesStream: prefix cache key with
  realm ID to prevent cross-realm key collisions; use String.join for
  a more predictable key format (fixes r3488823491)
- RealmCacheSession.getCompositeRolesStream: null-check the result of
  cache.get(parentId, CachedRole.class) before dereferencing it to
  prevent NPE on evicted entries (fixes r3488823493)
- CompositeRoleExpansionQueryCountTest.countQueries: save and restore
  Hibernate statistics enabled state to avoid affecting other tests
  (fixes r3488823497)
- CompositeRoleExpansionQueryCountTest: rename
  droppingIsCompositePreQueryHalvesGetChildRolesOnCompositeNodes to
  chainWalkIssuesOneQueryPerBreadthFirstLevel (fixes r3488823503)